2005-04-27  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/SourceEditorDisplayBinding.cs: Don't crash if the debugger
	is not installed.

2005-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorView.cs:
	* Gui/SourceEditorDisplayBinding.cs: Track changes in breakpoints, and
	debug execution location.

2005-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* texteditoraddin.glade: Added missing stop button in the replace
	in files dialog.

2005-04-25  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/SourceEditorWidget.cs: Moved here editor-specific commands.
	* Gui/SourceEditorDisplayBinding.cs: The methods for managing
	bookmarks are now in the editor widget, not the buffer.
	* Commands/EditorCommands.cs: New enum with IDs for edit commands.
	* Commands/SearchCommands.cs: Moved editor-specific commands to
	SourceEditorWidget.cs.
	* MonoDevelopEditor.addin.xml: Created the new command structure.

2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorWidget.cs:
	* Gui/SourceEditorBuffer.cs:
	* SourceEditorDisplayBinding.cs: Improve memory usage.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-09  John Luke  <john.luke@gmail.com>

	* CodeCompletion/ListWindow.cs: dont crash
	if the provider is null, fixes bug #74492

2005-04-09  John Luke  <john.luke@gmail.com>

	* Services/SourceViewService.cs: catch XmlException
	while restoring style/color prefs

2005-04-06  John Luke  <john.luke@gmail.com>

	* Services/SourceViewService.cs: dont serialize
	the defaults, add some logging, and use SourceTag.Id
	not the .Name

2005-04-06  Alexandre Gomes  <alexmipego@gmail.com>
	
	* Services/SourceViewService.cs: Fix a small problem that can occur
	to svn users since some users that can be missing isDefault at all.

2005-04-05  John Luke  <john.luke@gmail.com>

	* Gui/OptionPanels/SyntaxHighlightingPanel.cs:
	fix two buglets with the sensitivity of restore
	apparently we have to set .IsDefault to false ourselves