@@ -63,25 +63,29 @@
 		<Command id = "MonoDevelop.DefaultEditor.EditorCommands.ToggleBookmark"
 				icon = "Icons.16x16.ToggleBookmark"
 				shortcut = "Control|F2"
+				description = "Toggle Bookmark"
 				_label = "Toggle Bookmark" />
 		<Command id = "MonoDevelop.DefaultEditor.EditorCommands.PrevBookmark"
 				icon = "Icons.16x16.GotoPrevbookmark"
 				shortcut = "Shift|F2"
+				description = "Previous Bookmark"
 				_label = "Previous Bookmark" />
 		<Command id = "MonoDevelop.DefaultEditor.EditorCommands.NextBookmark"
 				icon = "Icons.16x16.GotoNextbookmark"
 				shortcut = "F2"
+				description = "Next Bookmark"
 				_label = "Next Bookmark" />
 		<Command id = "MonoDevelop.DefaultEditor.EditorCommands.ClearBookmarks"
 				icon = "Icons.16x16.ClearAllBookmarks"
+				description = "Clear Bookmarks"
 				_label = "Clear Bookmarks" />
 		<Command id = "MonoDevelop.DefaultEditor.EditorCommands.GotoLineNumber"
 				_label = "_Goto Line..." 
-				description = "${res:XML.MainMenu.SearchMenu.GotoLineNr.Description}" 
+				description = "Goto line"
 				shortcut = "Control|G" />
 		<Command id = "MonoDevelop.DefaultEditor.EditorCommands.GotoMatchingBrace"
 				_label = "Goto Matching _Brace" 
-				description = "${res:XML.MainMenu.SearchMenu.GotoBrace.Description}" 
+				description = "Goto Matching Brace" 
 				shortcut = "Control|B" />
 
 		<!-- SearchCommands -->
@@ -89,36 +93,37 @@
 		<Command id = "MonoDevelop.Commands.SearchCommands.Find"
 				_label = "_Find..." 
 				icon = "Icons.16x16.FindIcon" 
-				description = "${res:XML.MainMenu.SearchMenu.Find.Description}" 
+				description = "Find" 
 				shortcut = "Control|F" />
 		<Command id = "MonoDevelop.Commands.SearchCommands.FindNext"
 				_label = "Find _Next" 
 				icon = "Icons.16x16.FindNextIcon" 
-				description = "${res:XML.MainMenu.SearchMenu.FindNext.Description}" 
+				description = "Find next" 
 				shortcut = "F3" />
 		<Command id = "MonoDevelop.Commands.SearchCommands.FindSelection"
 				_label = "Find Selection" 
+				description = "Find selection" 
 				shortcut = "Control|F3" />
 		<Command id = "MonoDevelop.Commands.SearchCommands.FindPrevious"
 				_label = "Find _Previous" 
 				icon = "Icons.16x16.FindPrevIcon" 
-				description = "${res:XML.MainMenu.SearchMenu.FindPrevious.Description}" 
+				description = "Find previous" 
 				shortcut = "Shift|F3" />
 		<Command id = "MonoDevelop.Commands.SearchCommands.Replace"
 				_label = "_Replace..." 
 				icon = "Icons.16x16.ReplaceIcon" 
-				description = "${res:XML.MainMenu.SearchMenu.Replace.Description}" 
+				description = "Replace" 
 				shortcut = "Control|H" />
 		<Command id = "MonoDevelop.Commands.SearchCommands.FindInFiles"
 				defaultHandler = "MonoDevelop.Commands.FindInFilesHandler"
 				_label = "F_ind In Files..." 
 				icon = "Icons.16x16.FindInFiles" 
-				description = "${res:XML.MainMenu.SearchMenu.FindInFiles.Description}" />
+				description = "Find in files" />
 		<Command id = "MonoDevelop.Commands.SearchCommands.ReplaceInFiles"
 				defaultHandler = "MonoDevelop.Commands.ReplaceInFilesHandler"
 				_label = "R_eplace In Files..." 
 				icon = "Icons.16x16.ReplaceInFiles" 
-				description = "${res:XML.MainMenu.SearchMenu.ReplaceInFiles.Description}" />
+				description = "Replace in files" />
 	</Extension>
 
 	<Extension path = "/SharpDevelop/ViewContent/DefaultTextEditor/ContextMenu">
